--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "bootstrap": "^5.3.2",
     "bootstrap-icons": "^1.11.1",
     "firebase": "^10.5.2",
+    "ng-recaptcha": "^12.0.2",
     "rxjs": "~7.8.0",
     "sweetalert2": "^11.9.0",
     "tslib": "^2.3.0",
