--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser": "^16.2.0",
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
+    "@ng-select/ng-select": "^11.2.0",
     "bootstrap": "^5.3.2",
     "bootstrap-icons": "^1.11.1",
     "firebase": "^10.5.2",
