--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "bootstrap-icons": "^1.11.1",
     "firebase": "^10.5.2",
     "ng-recaptcha": "^12.0.2",
+    "pdfmake": "^0.2.8",
     "rxjs": "~7.8.0",
     "sweetalert2": "^11.9.0",
     "tslib": "^2.3.0",
@@ -37,6 +38,7 @@
     "@angular/cli": "~16.2.1",
     "@angular/compiler-cli": "^16.2.0",
     "@types/jasmine": "~4.3.0",
+    "@types/pdfmake": "^0.2.8",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
