--- a/package.json
+++ b/package.json
@@ -25,8 +25,10 @@
     "@ng-select/ng-select": "^11.2.0",
     "bootstrap": "^5.3.2",
     "bootstrap-icons": "^1.11.1",
+    "chart.js": "^3.6.0",
     "firebase": "^10.5.2",
     "ng-recaptcha": "^12.0.2",
+    "ng2-charts": "^5.0.3",
     "pdfmake": "^0.2.8",
     "rxjs": "~7.8.0",
     "sweetalert2": "^11.9.0",
